@@ -834,7 +834,7 @@ FireWeaponType FireWeapon(LaraWeaponType weaponType, ItemInfo* targetEntity, Ite
 		Statistics.Game.AmmoHits++;
 		target = origin + (directionNorm * bestDistance);
 		auto vTarget = GameVector(target);
-		
+
 		// NOTE: It seems that entities hit by the player in the normal way must have GetTargetOnLOS return false.
 		// It's strange, but this replicates original behaviour until we fully understand what is happening.
 		if (!GetTargetOnLOS(&vOrigin, &vTarget, false, true))
